# lint_ii

./: .gitignore  LICENSE  README.md  environment.yml  index.html  index.md  lint_ii_demo.ipynb  pyproject.toml
abstract_nouns/: README.md  abstract_nouns.py
data/: A2.json  B1.json  B2.json  C2.json  nagelaten_bekentenis.json
examples_for_visualizer/: level1.json  level2.json  level3.json  level4.json
src/lint_ii/: __init__.py
src/lint_ii/core/: lint_scorer.py  preprocessor.py  readability_analysis.py  sentence_analysis.py  word_features.py
src/lint_ii/linguistic_data/: __init__.py  nlp_model.py  nouns_sem_types_20251008.parquet  nouns_sem_types_20251010.parquet  nouns_sem_types_20251017.parquet  wordlists.py
src/lint_ii/linguistic_data/data/: manner_adverbs_20251017.parquet  measurement_units.parquet  nouns_sem_types_20251017.parquet  nouns_sem_types_20251118.parquet  nouns_sem_types_20260420.parquet  subtlex_wordfreq.parquet  subtlex_wordfreq_skiplist.parquet
src/lint_ii/visualization/: html.py  template.jinja.html  text.md
src/lint_ii/wordlists/: __init__.py  nouns_sem_types_20250929.parquet
src/visualizer/: lint_ii_visualizer.js  test.html  test.ipynb  test.json
src/visualizer/core/: popup.js  stats.js  stylesheet.js  wheel-handler.js
