[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lint_ii"]

[project]
name = "lint_ii"
version = "0.1.0"
description = "LiNT-II is a readability assessment tool for Dutch."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "spacy>=3.7,<3.8",
    "numpy>=1.25.0,<2.0",
    "pyarrow>=21.0,<22.0",
    "mistune>=3.1,<3.2",
]

[project.optional-dependencies]
notebook = ["ipykernel", "jupyter"]